# guild

./: .gitignore  README.md  clippy.toml  familiar  starter.md
.familiar/: learnings.md
.github/workflows/: ci.yml
.guild/: learnings.md
agents/: caveman.md  fix.md  implement.md  plan.md  verify.md
daemon/: Cargo.toml
daemon/repos/kaugakauga-guild.git/: FETCH_HEAD  config  packed-refs
daemon/repos/kaugakauga-guild.git/logs/refs/heads/guild/: issue-49  issue-51
daemon/repos/kaugakauga-guild.git/objects/pack/: pack-8a474a4281b061e556262a2543964b67434d252d.idx  pack-8a474a4281b061e556262a2543964b67434d252d.pack  pack-8a474a4281b061e556262a2543964b67434d252d.rev
daemon/repos/kaugakauga-guild.git/refs/heads/guild/: issue-49  issue-51
daemon/repos/kaugakauga-guild.git/worktrees/worktree/: HEAD  gitdir  index
daemon/repos/kaugakauga-guild.git/worktrees/worktree/logs/: HEAD
daemon/repos/kaugakauga-guild.git/worktrees/worktree1/: COMMIT_EDITMSG  HEAD  ORIG_HEAD  gitdir  index
daemon/repos/kaugakauga-guild.git/worktrees/worktree1/logs/: HEAD
daemon/src/: banner.rs  copilot.rs  db.rs  github.rs  main.rs  pipeline.rs  tui.rs
daemon/src/agent/: claude.rs  copilot.rs  mod.rs
prompts/: fix.md  implement.md  plan.md
